<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_character"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/img_character_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@color/white"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,4:3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/name_character_detail"
            android:contentDescription="@string/image_character"
            />

        <TextView
            android:id="@+id/name_character_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/purple_700"
            android:background="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_character_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/type_character"
            android:text="@string/type"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_default_style"
            app:layout_constraintTop_toBottomOf="@id/name_character_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            />
        <TextView
            android:id="@+id/response_type"
            android:text="@string/response_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_default_style"
            app:layout_constraintTop_toBottomOf="@+id/name_character_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/type_character"
            />

        <TextView
            android:id="@+id/gender_character"
            style="@style/textview_default_style"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"/>

        <TextView
            android:id="@+id/response_gender"
            style="@style/textview_default_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gender_character"
            app:layout_constraintTop_toBottomOf="@id/response_type" />

        <TextView
            android:id="@+id/location_character_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/textview_default_style"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/gender_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            />

        <TextView
            android:id="@+id/response_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_default_style"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/gender_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/location_character_detail"
            />

        <TextView
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@+id/location_character_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/name_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/textview_default_style"
            app:layout_constraintTop_toBottomOf="@id/episode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/episode_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/textview_default_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_episode"
            />

        <TextView
            android:id="@+id/episode_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_code"
            style="@style/textview_default_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episode_date"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</LinearLayout>